--- a/src/components/AddButton.css
+++ b/src/components/AddButton.css
@@ -1,9 +1,3 @@
-.material-icons {
-    vertical-align: middle;
-    background-color: green;
-    color: white;
-}
-
 .AddButton {
     display: flex;
     flex-direction: row;
@@ -25,6 +19,12 @@
     color: white;
 }
 
-.Label {
+.AddButton-Icon {
+    vertical-align: middle;
+    background-color: green;
+    color: white;
+}
+
+.AddButton-Label {
     padding: 4px;
 }
