--- a/src/components/CollapsibleComponent.css
+++ b/src/components/CollapsibleComponent.css
@@ -24,7 +24,12 @@
 .CollapsibleComponent-Title {
     grid-column: 2;
     grid-row: 1;
-    text-align: left;
+    display: flex;
+    flex-direction: row;
+}
+
+.CollapsibleComponent-TitleLabel {
+    flex-grow: 1;
 }
 
 .CollapsibleComponent-Content {
