--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,13 +1,47 @@
 .App {
     text-align: center;
-  }
-  
-  ::selection{
-      background: green;
-      color: white;
-  }
-  
-  ::-moz-selection {
-      background: green;
-      color: white;
-  }
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-items: stretch;
+}
+
+@keyframes fadeOutAndIn {
+    0% {opacity: 1;}
+    50% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+.App-Preview {
+    flex: 1;
+}
+
+@keyframes fadeOut {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+.App-FadeOut {
+    animation-name: fadeOut;
+    animation-duration: 0.5s;
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.App-FadeIn {
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+}
+
+::selection {
+    background: green;
+    color: white;
+}
+
+::-moz-selection {
+    background: green;
+    color: white;
+}
