--- a/src/components/ResumeForm.css
+++ b/src/components/ResumeForm.css
@@ -1,10 +1,9 @@
 .ResumeForm {
     padding: 8px;
-    background-color: black;
     display: flex;
     flex-direction: column;
     gap: 8px;
-    color: white;
+    color: var(--white);
     flex: 1;
     overflow-y: auto;
 }
