--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,18 @@
+:root {
+    --green: rgb(16, 160, 16);
+    --red: rgb(255, 32, 32);
+    --white: rgb(224, 224, 224);
+    --focus-white: white;
+    --focus-color: rgb(41, 122, 211);
+}
+
 .App {
     text-align: center;
     display: flex;
     width: 100%;
     height: 100vh;
     align-items: stretch;
+    background: rgb(24, 24, 24);
 }
 
 @keyframes fadeOutAndIn {
@@ -37,11 +46,11 @@
 }
 
 ::selection {
-    background: green;
-    color: white;
+    background: var(--green);
+    color: var(--focus-white);
 }
 
 ::-moz-selection {
-    background: green;
-    color: white;
+    background: var(--green);
+    color: var(--focus-white);
 }
