--- a/src/components/EditableLabel.css
+++ b/src/components/EditableLabel.css
@@ -4,18 +4,18 @@
     border-width: 1px;
     border-style: solid;
     outline: none;
-    color: white;
+    color: var(--white);
     border-radius: 4px;
     text-align: left;
 }
 
 .EditableLabel:hover {
-    color: green;
+    color: var(--focus-color);
 }
 
 .EditableLabel:focus {
-    border-color: green;
-    color: white;
+    border-color: var(--focus-color);
+    color: var(--focus-white);
 }
 
 .EditableLabel:read-only {
