--- a/src/components/SpinBox.css
+++ b/src/components/SpinBox.css
@@ -3,13 +3,14 @@
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
-    border-color: white;
+    border-color: var(--white);
     background: none;
-    color: white;
+    color: var(--white);
 }
 
-.SpinBox:focus {
-    border-color: green;
+.SpinBox:focus, .SpinBox:hover {
+    border-color: var(--focus-color);
+    color: var(--focus-white);
 }
 
 .SpinBox[type=number]::-webkit-inner-spin-button {
