--- a/src/components/UnderlinedInput.css
+++ b/src/components/UnderlinedInput.css
@@ -1,11 +1,8 @@
 .UnderlinedInput {
     padding: 4px;
     background: transparent;
-    border-top: none;
-    border-left: none;
-    border-right: none;
     border-color: var(--white);
-    border-width: 1px;
+    border-width: 0 0 1px 0;
     outline: none;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--white);
