--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,22 +7,33 @@
 }
 
 .App {
+    flex-direction: row;
     text-align: center;
     display: flex;
     width: 100%;
     height: 100vh;
-    align-items: stretch;
     background: rgb(24, 24, 24);
+}
+
+.App-Preview {
+    flex: 1;
+}
+
+@media only screen and (max-aspect-ratio: 12/9) {
+    .App {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .App-Preview {
+        min-height: 100vh;
+    }
 }
 
 @keyframes fadeOutAndIn {
     0% {opacity: 1;}
     50% {opacity: 0;}
     100% {opacity: 1;}
-}
-
-.App-Preview {
-    flex: 1;
 }
 
 @keyframes fadeOut {
