--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,6 +11,7 @@
     text-align: center;
     display: flex;
     width: 100%;
+    max-width: 100vw;
     height: 100vh;
     background: rgb(24, 24, 24);
 }
