--- a/src/components/App.css
+++ b/src/components/App.css
@@ -31,10 +31,32 @@
     }
 }
 
-@keyframes fadeOutAndIn {
-    0% {opacity: 1;}
-    50% {opacity: 0;}
-    100% {opacity: 1;}
+.App-CookiesBanner {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    padding: 16px;
+    justify-content: center;
+    align-items: center;
+    background: rgb(24, 32, 40);
+    color: var(--white);
+}
+
+.App-CookiesBannerButton {
+    background: var(--green);
+    color: var(--white);
+    outline: none;
+    border-radius: 16px;
+    border-color: var(--white);
+    padding: 4px 24px;
+    cursor: pointer;
+}
+
+.App-CookiesBannerButton:hover {
+    background: var(--focus-color);
 }
 
 @keyframes fadeOut {
