--- a/src/components/CookiesBanner.css
+++ b/src/components/CookiesBanner.css
@@ -8,7 +8,7 @@
     padding: 16px;
     justify-content: center;
     align-items: center;
-    background: rgb(24, 32, 40);
+    background: var(--bar-color);
     color: var(--white);
 }
 
